Experiment tracking working on metaflow and sagemaker

--- a/nbs/test/test_tracking.ipynb
+++ b/nbs/test/test_tracking.ipynb
@@ -11,7 +11,19 @@
     "import tempfile\n",
     "\n",
     "import numpy as np\n",
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "\n",
+    "from sciflow.experiment.tracking import MockTracker, SciFlowTracker"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tracker = MockTracker()\n",
+    "%matplotlib auto"
    ]
   },
   {
@@ -33,9 +45,10 @@
     "# exportn_step:something\n",
     "\n",
     "\n",
-    "def something(tracker=None):\n",
+    "def something(tracker: SciFlowTracker = None):\n",
     "    message = \"The first step\"\n",
     "    print(f\"{message}\")\n",
+    "    print(f\"something tracker: {tracker}\")\n",
     "    if tracker:\n",
     "        with tempfile.TemporaryDirectory() as temp_dir:\n",
     "            tracker.log_metric(\"auroc\", 0.5, 0)\n",
@@ -57,7 +70,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "message = something()[\"message\"]"
+    "message = something(tracker=tracker)[\"message\"]"
    ]
   },
   {
@@ -216,11 +229,16 @@
     "\n",
     "\n",
     "def preprocess(\n",
-    "    message, model_level=None, min_date=None, traffic_percent=100, tracker=None\n",
+    "    message,\n",
+    "    model_level=None,\n",
+    "    min_date=None,\n",
+    "    traffic_percent=100,\n",
+    "    tracker: SciFlowTracker = None,\n",
     "):\n",
     "    print(f\"I captialised the message: {message.upper()}\")\n",
     "    data = get_utterances(model_level, min_date, traffic_percent)\n",
     "    documents = data.tolist()\n",
+    "    print(f\"Preprocess tracker: {tracker}\")\n",
     "    if tracker:\n",
     "        with tempfile.TemporaryDirectory() as temp_dir:\n",
     "            tracker.log_metric(\"roc\", 0.9, 0)\n",
@@ -242,7 +260,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "documents = preprocess(message, traffic_percent)[\"documents\"]"
+    "documents = preprocess(message, traffic_percent, tracker=tracker)[\"documents\"]"
    ]
   },
   {
@@ -306,8 +324,9 @@
     "# exportn_step:fit\n",
     "\n",
     "\n",
-    "def fit(documents, workers=workers, tracker=None):\n",
+    "def fit(documents, workers=workers, tracker: SciFlowTracker = None):\n",
     "    model = Topics(documents, workers=workers)\n",
+    "    print(f\"Fit tracker: {tracker}\")\n",
     "    if tracker:\n",
     "        with tempfile.TemporaryDirectory() as temp_dir:\n",
     "            tracker.log_metric(\"roc\", 0.9, 0)\n",
@@ -348,7 +367,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model = fit(documents, workers=workers)[\"model\"]"
+    "model = fit(documents, workers=workers, tracker=tracker)[\"model\"]"
    ]
   },
   {
