--- a/nbs/to_sagemaker.ipynb
+++ b/nbs/to_sagemaker.ipynb
@@ -68,7 +68,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "nb_path = Path(os.path.join(\"test\", \"test_multistep.ipynb\"))\n",
+    "nb_path = Path(os.path.join(\"test\", \"test_tracking.ipynb\"))\n",
     "nb = read_nb(nb_path)\n",
     "module_name = find_default_export(nb[\"cells\"]).replace(\".\", \"/\")\n",
     "test_module = os.path.join(get_config().path(\"lib_path\"), f\"{module_name}.py\")"
@@ -145,7 +145,7 @@
     "            track_experiment,\n",
     "        )\n",
     "    except ValueError as ve:\n",
-    "        print(f\"Sagemaker conversion failed for {nb_name}, \\nReason: {ve}\")\n",
+    "        print(f\"Sagemaker conversion failed for {nb_name}, Reason: {ve}\")\n",
     "        return\n",
     "    if not silent:\n",
     "        print(\n",
@@ -525,7 +525,7 @@
     "            )\n",
     "        else:\n",
     "            raise ValueError(\n",
-    "                f\"Unsupported parameter type for sagemaker pipeline: {param_meta[param]}\"\n",
+    "                f\"Unsupported parameter type for sagemaker pipeline: {param_meta[param].instance_type}\"\n",
     "            )"
    ]
   },
@@ -569,11 +569,11 @@
     "        step_proc_vars = [a for a in args if a in processing_flow_scope]\n",
     "        step_train_vars = [a for a in args if a in train_flow_scope]\n",
     "        unscoped_vars = set(args).difference(\n",
-    "            set(step_input + step_proc_vars + step_train_vars)\n",
+    "            set(step_input + step_proc_vars + step_train_vars + [\"tracker\"])\n",
     "        )\n",
     "        if len(unscoped_vars) > 0:\n",
     "            raise ValueError(\n",
-    "                f'Step: {step.name} depends on variable(s), \"{unscoped_vars}\", which are not in the flow scope'\n",
+    "                f'Step: {step.name} depends on variable(s) not in flow scope: \"{unscoped_vars}\"'\n",
     "            )\n",
     "        result = {\n",
     "            \"step_input\": step_input,\n",
@@ -596,6 +596,14 @@
     "    \"fit_single_arg_step\",\n",
     "    docstring=None,\n",
     "    args=\"one_param\",\n",
+    "    has_return=False,\n",
+    "    return_stmt=None,\n",
+    "    code=\"\",\n",
+    ")\n",
+    "tracking_step = FuncDetails(\n",
+    "    \"tracking_step\",\n",
+    "    docstring=None,\n",
+    "    args=\"tracker\",\n",
     "    has_return=False,\n",
     "    return_stmt=None,\n",
     "    code=\"\",\n",
@@ -1209,9 +1217,7 @@
     "            sm_module_file.write(\"\\n\")\n",
     "            sm_module_file.write(f'if __name__ == \"__main__\":\\n')\n",
     "            sm_module_file.write(f\"{ind}args = parse_args()\\n\")\n",
-    "            sm_module_file.write(f\"{ind}main(**vars(args))\\n\")\n",
-    "            # write to flow path/step\n",
-    "        print(f\"Created sagemaker module: {sm_module_path.name}\")"
+    "            sm_module_file.write(f\"{ind}main(**vars(args))\\n\")"
    ]
   },
   {
@@ -1380,13 +1386,6 @@
    "source": [
     "generate_flows()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
