--- a/nbs/tracking.ipynb
+++ b/nbs/tracking.ipynb
@@ -288,7 +288,7 @@
     "# export\n",
     "\n",
     "\n",
-    "class SciflowTracker:\n",
+    "class SciFlowTracker:\n",
     "    def log_metric(self, metric_name, metric_value, metric_step):\n",
     "        pass\n",
     "\n",
@@ -305,7 +305,7 @@
     "# export\n",
     "\n",
     "\n",
-    "class TempFileTracker(SciflowTracker):\n",
+    "class TempFileTracker(SciFlowTracker):\n",
     "    def __init__(metrics_path=None, artifacts_dir=None):\n",
     "        self.metrics_path = metrics_path\n",
     "        self.artifacts_dir = artifacts_dir\n",
@@ -328,7 +328,7 @@
     "# export\n",
     "\n",
     "\n",
-    "class MockTracker(SciflowTracker):\n",
+    "class MockTracker(SciFlowTracker):\n",
     "    def log_metric(self, metric_name, metric_value, metric_step):\n",
     "        pass\n",
     "\n",
@@ -345,7 +345,7 @@
     "# export\n",
     "\n",
     "\n",
-    "class StepTracker(SciflowTracker):\n",
+    "class StepTracker(SciFlowTracker):\n",
     "    def __init__(\n",
     "        self,\n",
     "        bucket_name,\n",
