Removed abalone example. Edited readme and index as well as tidying up project init experience

--- a/nbs/init.ipynb
+++ b/nbs/init.ipynb
@@ -27,7 +27,9 @@
     "\n",
     "from pathlib import Path\n",
     "\n",
-    "from fastcore.script import Param, call_parse"
+    "from fastcore.script import Param, call_parse\n",
+    "\n",
+    "from sciflow.utils import prepare_env"
    ]
   },
   {
@@ -300,7 +302,9 @@
     "    write_env_file(sciflow_dir)\n",
     "\n",
     "    # Add project root to PYTHONPATH environment variable\n",
-    "    write_edited_pythonpath(project_root, sciflow_dir)"
+    "    write_edited_pythonpath(project_root, sciflow_dir)\n",
+    "\n",
+    "    prepare_env()"
    ]
   },
   {
@@ -343,6 +347,13 @@
     "with open(env_path, \"w\") as env_file:\n",
     "    env_file.write(\"\".join(env_file_contents[:-1]))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
