--- a/nbs/packaging.ipynb
+++ b/nbs/packaging.ipynb
@@ -22,7 +22,7 @@
     "We are explicit about the code that makes up the Data Science workflow using the sciflow steps/flows method. This helps extract the virtual environments which are needed to run the flows & allows downstream processes to have a reliable (pinned) version of dependencies that work for a workflow instance.\n",
     "\n",
     "## 1.1 Dependency Calculation\n",
-    "* [pigar](https://github.com/damnever/pigar): the pigar library is used to calculate the dependencies used of all moduels in the `sciflow` lib.\n",
+    "* [pigar](https://github.com/damnever/pigar): the pigar library is used to calculate the dependencies used of all modules in the `sciflow` lib.\n",
     "\n",
     "# 2. Making It Easier\n",
     "\n",
