--- a/nbs/run_flow.ipynb
+++ b/nbs/run_flow.ipynb
@@ -31,7 +31,6 @@
     "import asyncio\n",
     "import multiprocessing\n",
     "import os\n",
-    "import subprocess\n",
     "import sys\n",
     "from itertools import product\n",
     "from pathlib import Path\n",
@@ -41,7 +40,7 @@
     "from fastcore.script import call_parse\n",
     "from nbdev.export import find_default_export, get_config, read_nb\n",
     "\n",
-    "from sciflow.utils import chunks, get_flow_path, prepare_env"
+    "from sciflow.utils import chunks, get_flow_path, prepare_env, run_shell_cmd"
    ]
   },
   {
@@ -84,12 +83,12 @@
     "# export\n",
     "\n",
     "\n",
-    "def run_shell_cmd(script: str):\n",
-    "    pipe = subprocess.Popen(\n",
-    "        \"%s\" % script, stdout=subprocess.PIPE, stderr=subprocess.STDOUT, shell=True\n",
-    "    )\n",
-    "    output = pipe.communicate()[0]\n",
-    "    return pipe, output.decode(\"utf-8\").strip()"
+    "def check_is_init():\n",
+    "    root_path = str(get_config().path(\"root_path\"))\n",
+    "\n",
+    "    if root_path not in sys.path:\n",
+    "        # TODO change to SciflowError\n",
+    "        raise ValueError(\"Sciflow project is not in path; have you run sciflow_init?\")"
    ]
   },
   {
@@ -129,6 +128,8 @@
     "def check_call_flow(\n",
     "    flow_nb_path, flow_provider=\"metaflow\", flow_command=\"show\", params=None\n",
     "):\n",
+    "    check_is_init()\n",
+    "\n",
     "    cmd = make_shell_cmd(flow_nb_path, flow_provider, flow_command, params)\n",
     "    pipe, output = run_shell_cmd(cmd)\n",
     "    return pipe.returncode, output"
