--- a/nbs/scilint.ipynb
+++ b/nbs/scilint.ipynb
@@ -43,6 +43,7 @@
     "\n",
     "import ast\n",
     "import os\n",
+    "import re\n",
     "from collections import Counter\n",
     "from pathlib import Path\n",
     "\n",
@@ -226,6 +227,73 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "nb_cell_code = r\"\"\"\n",
+    "def something():\n",
+    "    pass; pass # in x 2\n",
+    "    \n",
+    "%load_ext autoreload\n",
+    "%autoreload 2\n",
+    "\n",
+    "!ls -l\n",
+    "if 1!= 2:\n",
+    "    print(4)\n",
+    "# export\n",
+    "\n",
+    "import pandas as pd # out\n",
+    "from sciflow.utils import lib_path, odbc_connect, query # out\n",
+    "\n",
+    "# export\n",
+    "\n",
+    "def nb_to_sagemaker_pipeline(\n",
+    "    nb_path: Path,\n",
+    "    silent: bool = True,\n",
+    "):\n",
+    "    nb = read_nb(nb_path)  # in\n",
+    "    lib_name = get_config().get(\"lib_name\")  # in\n",
+    "    module_name = find_default_export(nb[\"cells\"])  # in\n",
+    "    \n",
+    "x = [1,2,3] # out\n",
+    "nb_to_sagemaker_pipeline() # out\n",
+    "\"\"\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# export\n",
+    "\n",
+    "\n",
+    "def replace_ipython_magics(code):\n",
+    "    # Replace Ipython magic and shell command symbol with comment\n",
+    "    code = code.replace(\"%\", \"#\")\n",
+    "    code = re.sub(r\"^!\", \"#\", code)\n",
+    "    return re.sub(r\"\\n\\W?!\", \"\\n#\", code)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "throws = False\n",
+    "try:\n",
+    "    assert ast.parse(nb_cell_code)\n",
+    "except SyntaxError:\n",
+    "    throws = True\n",
+    "assert throws\n",
+    "assert type(ast.parse(replace_ipython_magics(nb_cell_code))) == ast.Module"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# export\n",
     "\n",
     "\n",
@@ -283,7 +351,11 @@
     "def tpf(nb, module_code):\n",
     "    pnb = nbformat.from_dict(nb)\n",
     "    nb_cell_code = \"\\n\".join(\n",
-    "        [c[\"source\"].replace(\"%\", \"#\") for c in pnb.cells if c[\"cell_type\"] == \"code\"]\n",
+    "        [\n",
+    "            replace_ipython_magics(c[\"source\"])\n",
+    "            for c in pnb.cells\n",
+    "            if c[\"cell_type\"] == \"code\"\n",
+    "        ]\n",
     "    )\n",
     "    func_defs = get_function_defs(module_code)\n",
     "    func_calls = count_func_calls(nb_cell_code, func_defs)\n",
@@ -317,45 +389,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "nb_cell_code = r\"\"\"\n",
-    "def something():\n",
-    "    pass; pass # in x 2\n",
-    "    \n",
-    "#load_ext autoreload\n",
-    "#autoreload 2\n",
-    "# export\n",
-    "\n",
-    "import pandas as pd # out\n",
-    "from sciflow.utils import lib_path, odbc_connect, query # out\n",
-    "\n",
-    "# export\n",
-    "\n",
-    "def nb_to_sagemaker_pipeline(\n",
-    "    nb_path: Path,\n",
-    "    silent: bool = True,\n",
-    "):\n",
-    "    nb = read_nb(nb_path)  # in\n",
-    "    lib_name = get_config().get(\"lib_name\")  # in\n",
-    "    module_name = find_default_export(nb[\"cells\"])  # in\n",
-    "    \n",
-    "x = [1,2,3] # out\n",
-    "nb_to_sagemaker_pipeline() # out\n",
-    "\"\"\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "# export\n",
     "\n",
     "\n",
     "def calc_ifp(nb_cell_code):\n",
     "    stmts_in_func = 0\n",
     "    stmts_outside_func = 0\n",
-    "    for stmt in ast.walk(ast.parse(nb_cell_code)):\n",
+    "    for stmt in ast.walk(ast.parse(replace_ipython_magics(nb_cell_code))):\n",
     "        if isinstance(stmt, ast.FunctionDef) and not stmt.name.startswith(\"_\"):\n",
     "            for body_item in stmt.body:\n",
     "                stmts_in_func += 1\n",
@@ -376,7 +416,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "assert (calc_ifp(nb_cell_code)) == (5 / (4 + 5)) * 100"
+    "assert (calc_ifp(nb_cell_code)) == (5 / (5 + 5)) * 100"
    ]
   },
   {
@@ -390,7 +430,11 @@
     "\n",
     "def ifp(nb):\n",
     "    nb_cell_code = \"\\n\".join(\n",
-    "        [c[\"source\"].replace(\"%\", \"#\") for c in nb.cells if c[\"cell_type\"] == \"code\"]\n",
+    "        [\n",
+    "            replace_ipython_magics(c[\"source\"])\n",
+    "            for c in nb.cells\n",
+    "            if c[\"cell_type\"] == \"code\"\n",
+    "        ]\n",
     "    )\n",
     "    return calc_ifp(nb_cell_code)"
    ]
@@ -553,6 +597,7 @@
     "    nb_names = []\n",
     "    for nb_path in nb_paths:\n",
     "        nb_names.append(nb_path.stem)\n",
+    "        print(nb_path)\n",
     "        results.append(lint_nb(nb_path))\n",
     "    lint_report = pd.DataFrame.from_records(\n",
     "        data=results, index=nb_names, columns=lt_metric_cols + gt_metric_cols\n",
