--- a/nbs/to_metaflow.ipynb
+++ b/nbs/to_metaflow.ipynb
@@ -493,7 +493,9 @@
     "        wrapper_file.write(\"\\n\")\n",
     "        wrapper_file.write(\"\\n\")\n",
     "        wrapper_file.write('if __name__ == \"__main__\":\\n')\n",
-    "        wrapper_file.write(f'{ind}wrapped_module = \"_sciflow_{flow_path.name}\"\\n')\n",
+    "        wrapper_file.write(\n",
+    "            f'{ind}wrapped_module = \"{str(flow_path).replace(flow_path.name, f\"_sciflow_{flow_path.name}\")}\"\\n'\n",
+    "        )\n",
     "        wrapper_file.write(f\"{ind}if len(sys.argv) == 1:\\n\")\n",
     "        wrapper_file.write(f'{ind}{ind}cmd = f\"python {{wrapped_module}} show\"\\n')\n",
     "        wrapper_file.write(f\"{ind}{ind}pipe, output = run_shell_cmd(cmd)\\n\")\n",
