--- a/nbs/utils.ipynb
+++ b/nbs/utils.ipynb
@@ -28,6 +28,7 @@
     "import _ast\n",
     "import ast\n",
     "import os\n",
+    "import subprocess\n",
     "from pathlib import Path\n",
     "\n",
     "import nbformat\n",
@@ -45,6 +46,41 @@
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Shell"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# export\n",
+    "\n",
+    "\n",
+    "def run_shell_cmd(script: str):\n",
+    "    pipe = subprocess.Popen(\n",
+    "        \"%s\" % script, stdout=subprocess.PIPE, stderr=subprocess.STDOUT, shell=True\n",
+    "    )\n",
+    "    output = pipe.communicate()[0]\n",
+    "    return pipe, output.decode(\"utf-8\").strip()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cmd_result = run_shell_cmd(\"pwd\")\n",
+    "assert cmd_result[0].returncode == 0\n",
+    "assert cmd_result[1].find(\"sciflow\") > 0"
    ]
   },
   {
