--- a/examples/02_hello_sciflow.ipynb
+++ b/examples/02_hello_sciflow.ipynb
@@ -15,6 +15,24 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from nbdev.export import get_config"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "get_config().lib_path"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# hide\n",
     "# default_exp hello_sciflow"
    ]
@@ -24,6 +42,19 @@
    "metadata": {},
    "source": [
     "The below code is an example of how to define a step. A step is a function we chain together to form a workflow. Typically they will have inputs and return values which can be used in subsequent steps but we start simple here."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# export\n",
+    "\n",
+    "from pathlib import Path\n",
+    "\n",
+    "from sciflow.run_flow import check_call_flow"
    ]
   },
   {
@@ -175,7 +206,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 1.3 See the created `Flow`"
+    "# 1.3 See the created module"
    ]
   },
   {
@@ -192,6 +223,22 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Create a `Flow`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!sciflow_metaflow --track False"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Run a `Flow`, this example uses `metaflow`"
    ]
   },
@@ -201,7 +248,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "##tst\n",
+    "# tst\n",
     "!source ~/.sciflow/env && python sciflow_examples/hello_sciflow.py --no-pylint run"
    ]
   },
@@ -211,15 +258,32 @@
    "source": [
     "# 2. Programmatically\n",
     "\n",
-    "TBC.."
+    "check_call_flow??"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# tst\n",
+    "print(check_call_flow(Path(\"flows/metaflow/hello_sciflow.py\"))[1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "python3 (conda-env/4)",
+   "display_name": "sciflow (sciflow/3)",
    "language": "python",
-   "name": "python3__SAGEMAKER_INTERNAL__arn:aws:sagemaker:eu-west-1:368653567616:image-version/conda-env/4"
+   "name": "python3__SAGEMAKER_INTERNAL__arn:aws:sagemaker:eu-west-1:368653567616:image-version/sciflow/3"
   }
  },
  "nbformat": 4,
