Tidied examples section

--- a/examples/02_hello_sciflow.ipynb
+++ b/examples/02_hello_sciflow.ipynb
@@ -248,17 +248,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# tst\n",
-    "!source ~/.sciflow/env && python sciflow_examples/hello_sciflow.py --no-pylint run"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# 2. Programmatically\n",
-    "\n",
-    "check_call_flow??"
+    "!source ~/.sciflow/env && python flows/metaflow/hello_sciflow.py"
    ]
   },
   {
@@ -268,7 +258,24 @@
    "outputs": [],
    "source": [
     "# tst\n",
-    "print(check_call_flow(Path(\"flows/metaflow/hello_sciflow.py\"))[1])"
+    "!source ~/.sciflow/env && python flows/metaflow/hello_sciflow.py --no-pylint run"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 2. Programmatically"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# tst\n",
+    "print(check_call_flow(Path(\"flows/metaflow/hello_sciflow.py\"), flow_command=\"run\")[1])"
    ]
   },
   {
