--- a/examples/03_running_flows.ipynb
+++ b/examples/03_running_flows.ipynb
@@ -7,15 +7,15 @@
    "outputs": [],
    "source": [
     "# hide\n",
-    "# default_exp why_make"
+    "# default_exp runnning_metaflows"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:sciflow]",
+   "display_name": "sciflow (sciflow/3)",
    "language": "python",
-   "name": "conda-env-sciflow-py"
+   "name": "python3__SAGEMAKER_INTERNAL__arn:aws:sagemaker:eu-west-1:368653567616:image-version/sciflow/3"
   }
  },
  "nbformat": 4,
