--- a/nbs/run_flow.ipynb
+++ b/nbs/run_flow.ipynb
@@ -88,7 +88,7 @@
     "\n",
     "    if root_path not in sys.path:\n",
     "        # TODO change to SciflowError\n",
-    "        raise ValueError(\"Sciflow project is not in path; have you run sciflow_init?\")"
+    "        raise ValueError(\"Project is not in path; have you run sciflow_init?\")"
    ]
   },
   {
@@ -141,6 +141,48 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "sys_path = sys.path\n",
+    "sys.path = []"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "raised = False\n",
+    "try:\n",
+    "    check_call_flow(nb_path, flow_provider=\"metaflow\", flow_command=\"show\")\n",
+    "except:\n",
+    "    raised = True\n",
+    "assert raised"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sys.path = sys_path"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "prepare_env()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "ret_code, output = check_call_flow(\n",
     "    nb_path, flow_provider=\"metaflow\", flow_command=\"show\"\n",
     ")\n",
@@ -158,6 +200,19 @@
     "ret_code, output = check_call_flow(\n",
     "    nb_path, flow_provider=\"metaflow\", flow_command=\"run\"\n",
     ")\n",
+    "assert ret_code == 0\n",
+    "print(output)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# slow\n",
+    "\n",
+    "ret_code, output = check_call_flow(nb_path, flow_command=\"run\")\n",
     "assert ret_code == 0\n",
     "print(output)"
    ]
