--- a/nbs/utils.ipynb
+++ b/nbs/utils.ipynb
@@ -29,6 +29,7 @@
     "import ast\n",
     "import os\n",
     "import subprocess\n",
+    "import sys\n",
     "from pathlib import Path\n",
     "\n",
     "import nbformat\n",
@@ -294,13 +295,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# ODBC Connection"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -319,7 +313,18 @@
     "    with (open(env_file_path, \"r\")) as env_file:\n",
     "        for line in env_file.readlines():\n",
     "            key, value = line.strip().split(\"=\", 1)\n",
-    "            os.environ[key.replace(\"export \", \"\")] = value"
+    "            os.environ[key.replace(\"export \", \"\")] = value\n",
+    "        python_path = [\n",
+    "            p for p in os.environ[\"PYTHONPATH\"].split(\":\") if p != \"$PYTHONPATH\"\n",
+    "        ]\n",
+    "        sys.path.extend(python_path)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# ODBC Connection"
    ]
   },
   {
