--- a/examples/06_experiment_tracking.ipynb
+++ b/examples/06_experiment_tracking.ipynb
@@ -13,9 +13,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:sciflow]",
+   "display_name": "sciflow (sciflow/3)",
    "language": "python",
-   "name": "conda-env-sciflow-py"
+   "name": "python3__SAGEMAKER_INTERNAL__arn:aws:sagemaker:eu-west-1:368653567616:image-version/sciflow/3"
   }
  },
  "nbformat": 4,
