Added nb quality, science build tool and exper tracking examples

--- a/examples/03_notebook_quality.ipynb
+++ b/examples/03_notebook_quality.ipynb
@@ -7,21 +7,39 @@
    "outputs": [],
    "source": [
     "# hide\n",
-    "# default_exp tidying_notebooks"
+    "# default_exp notebook_quality"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "`sciflow` uses the excellent `nbqa` library [https://github.com/nbQA-dev/nbQA] to clean notebooks during the build cycle. `sciflow` has a default nbqa configuration of using 3 notebook tidying tools `black`, `isort`, `autoflake`. These tools all have sensible defaults and hence require minimal upfront knowledge for Data Scientists to pick up. Like the ethos of `black` we believe that ceding control over this process provides speed & freedom."
+    "# Commands Discussed\n",
+    "\n",
+    "* `sciflow_tidy`: uses `nbqa` quality assurance for notebooks with tools that have sensible defaults - meaning less need to spend time setting style standards\n",
+    "* `sciflow_clean`: uses `nbdev_clean_nbs` to remove execution counts and cell metadata from notebooks - permitting more meaningful diffs\n",
+    "* `sciflow_lint`: experimental feature to lint notebooks. This feature will evolve once mroe data is gathered but it is an attempt to specify what features correlate with high quality notebooks."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# In-place mutation\n",
+    "`SciFlow` uses the excellent `nbqa` library [https://github.com/nbQA-dev/nbQA] to clean notebooks during the build cycle. `SciFlow` has a default nbqa configuration of using 3 notebook tidying tools `black`, `isort`, `autoflake`. These tools all have sensible defaults and hence require minimal upfront knowledge for Data Scientists to pick up. Like the ethos of `black` we believe that ceding control over this process provides speed & freedom."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 1. `sciflow_tidy`"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 1.1 In-place mutation\n",
     "\n",
     "Any style based amendments are made to the notebooks you are working on. So you sometimes see the Jupyter Cancel/Overwrite/Revert changes dialog. Ideally tidying the notebooks would trigger a Jupyter refresh to immediately see the refreshed content. We are working on making this happen. Until then if you want to keep any unsaved changes say Overwrite and if you want to load from disk say Revert."
    ]
@@ -30,7 +48,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Autoflake (https://github.com/myint/autoflake)\n",
+    "## 1.2 Autoflake (https://github.com/myint/autoflake)\n",
     "\n",
     "*autoflake removes unused imports and unused variables from Python code. It makes use of pyflakes to do this.*\n",
     "\n",
@@ -41,7 +59,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Isort (https://github.com/PyCQA/isort)\n",
+    "## 1.3 Isort (https://github.com/PyCQA/isort)\n",
     "\n",
     "\n",
     "*isort your imports, so you don't have to.*\n",
@@ -117,7 +135,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Black (https://github.com/psf/black)\n",
+    "## 1.4 Black (https://github.com/psf/black)\n",
     "\n",
     "*Black is the uncompromising Python code formatter. By using it, you agree to cede control over minutiae of hand-formatting. In return, Black gives you speed, determinism, and freedom from pycodestyle nagging about formatting. You will save time and mental energy for more important matters.*"
    ]
@@ -148,19 +166,51 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "`nbdev` tests are any cells which are not exporting code and do not have flags that say they should be ignored from testing."
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "get_traffic_text(\"3\") == \"03\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 2. `sciflow_clean`"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Clean superfluous metadata like execution counts and potentially cell output from notebooks - helps prepare for committing to source control.\n",
+    "\n",
+    "*Note: this command is a very simple wrapper on top of `nbdev_clean_nbs` which maintains papermill metadata.*\n",
+    "\n",
+    "See [here](https://nbdev.fast.ai/clean.html) for more information."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 3. `sciflow_lint`"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This command attempts to provide a quality assessment of a notebook. It is an experimental feature in that the data properties that have been selected may or may not correlate to notebook quality. These cna be iterated over time. \n",
+    "\n",
+    "Current quality features:\n",
+    "\n",
+    "* `tests_per_function`\n",
+    "* `markdown_code_percent`\n",
+    "* `total_code_len`\n",
+    "* `in_function_percent`"
    ]
   },
   {
