--- a/examples/02_hello_sciflow.ipynb
+++ b/examples/02_hello_sciflow.ipynb
@@ -6,25 +6,7 @@
    "source": [
     "# Typical Start\n",
     "\n",
-    "`nbdev` needs ot know where to export the module code fomr this notebook. You will typically just export to a module name the same as the notebook but you can rename and add extra directories to create a package structure if you wish"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from nbdev.export import get_config"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "get_config().lib_path"
+    "`nbdev` needs to know where to export the module code fomr this notebook. You will typically just export to a module name the same as the notebook but you can rename and add extra directories to create a package structure if you wish"
    ]
   },
   {
@@ -54,7 +36,8 @@
     "\n",
     "from pathlib import Path\n",
     "\n",
-    "from sciflow.run_flow import check_call_flow"
+    "from sciflow.run_flow import check_call_flow, run_flow_async\n",
+    "from sciflow.to_metaflow import sciflow_metaflow"
    ]
   },
   {
@@ -149,7 +132,7 @@
     "\n",
     "def second(traffic_percent):\n",
     "    results = {}\n",
-    "    # Currently step functions need to return a dictionary. The keys: artifacts and metrics are reserved for experiment tracking otherwiose any other named keys will be available in future steps.\n",
+    "    print(f\"Traffic percent: {traffic_percent}\")\n",
     "    results[\"traffic_multiplied\"] = traffic_percent * 2\n",
     "    return results"
    ]
@@ -199,7 +182,7 @@
    "outputs": [],
    "source": [
     "# tst\n",
-    "!nbdev_test_nbs --pause=1"
+    "!nbdev_test_nbs --pause=2"
    ]
   },
   {
@@ -239,7 +222,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Run a `Flow`, this example uses `metaflow`"
+    "# Run this notebook as a `Flow` (this example uses `metaflow`)"
    ]
   },
   {
@@ -275,7 +258,18 @@
    "outputs": [],
    "source": [
     "# tst\n",
-    "print(check_call_flow(Path(\"flows/metaflow/hello_sciflow.py\"), flow_command=\"run\")[1])"
+    "print(\n",
+    "    check_call_flow(Path(\"flows\", \"metaflow\", \"hello_sciflow.py\"), flow_command=\"run\")[\n",
+    "        1\n",
+    "    ]\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# You really are editing your current workflow - so you can keep modifying it as you go.."
    ]
   },
   {
@@ -283,7 +277,113 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# exportn_step:third\n",
+    "\n",
+    "\n",
+    "def third(traffic_percent):\n",
+    "    print(f\"Traffic * 3={traffic_percent * 3}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    ".. then convert it"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# tst\n",
+    "!sciflow_build_lib"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sciflow_metaflow(False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## You can call this workflow using different parameters."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# tst\n",
+    "print(\n",
+    "    check_call_flow(\n",
+    "        Path(\"flows\", \"metaflow\", \"hello_sciflow.py\"),\n",
+    "        flow_command=\"run\",\n",
+    "        params={\"traffic_percent\": 50},\n",
+    "    )[1]\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Async Flow Running\n",
+    "\n",
+    "You can also run flows in the background on your local machine or remotely using `run_flow_async`. This is useful if you are writing a notebook, have an idea to try something but want to keep thinking and exploring the problem space while you test out that idea."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# slow\n",
+    "\n",
+    "task = run_flow_async(\n",
+    "    Path(Path(\".\").resolve(), \"02_hello_sciflow.ipynb\"),\n",
+    "    params={\"traffic_percent\": 100},\n",
+    ")\n",
+    "task"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Do something else here..."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# slow\n",
+    "await task\n",
+    "assert 0 == task.result()[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(task.result()[1])"
+   ]
   }
  ],
  "metadata": {
