--- a/nbs/engine.ipynb
+++ b/nbs/engine.ipynb
@@ -43,6 +43,7 @@
     "import os\n",
     "import tempfile\n",
     "import uuid\n",
+    "from functools import lru_cache\n",
     "from typing import Tuple\n",
     "\n",
     "import boto3\n",
@@ -193,7 +194,7 @@
     "        self.remote_path = f\"{self.bucket_name}/{self.experiments_key}\"\n",
     "        self.lake_table = f\"{self.table_context}\"\n",
     "\n",
-    "    #    @lru_cache(maxsize=MAX_CACHE_SIZE)\n",
+    "    @lru_cache(maxsize=MAX_CACHE_SIZE)\n",
     "    def _find(\n",
     "        self,\n",
     "        experiment_ids=None,\n",
@@ -234,26 +235,26 @@
     "        ]  # bucket_name, base_key, experiment_id, start_time, data, name\n",
     "        return experiments\n",
     "\n",
-    "    #    @lru_cache(maxsize=MAX_CACHE_SIZE)\n",
+    "    @lru_cache(maxsize=MAX_CACHE_SIZE)\n",
     "    def find_by_id(self, experiment_id):\n",
     "        experiments = self._find(experiment_id=str(experiment_id))\n",
     "        return None if len(experiments) == 0 else experiments[0]\n",
     "\n",
-    "    #    @lru_cache(maxsize=MAX_CACHE_SIZE)\n",
+    "    @lru_cache(maxsize=MAX_CACHE_SIZE)\n",
     "    def find_by_ids(self, experiment_ids: Tuple[str]):\n",
     "        if len(experiment_ids) == 1:\n",
     "            raise ValueError(\"Use find_by_id for a single experiment\")\n",
     "        return self._find(experiment_ids=experiment_ids)\n",
     "\n",
-    "    #    @lru_cache(maxsize=MAX_CACHE_SIZE)\n",
+    "    @lru_cache(maxsize=MAX_CACHE_SIZE)\n",
     "    def find_latest(self, n=5):\n",
     "        return self._find(order_by=\"start_time\", limit=n)\n",
     "\n",
-    "    #    @lru_cache(maxsize=MAX_CACHE_SIZE)\n",
+    "    @lru_cache(maxsize=MAX_CACHE_SIZE)\n",
     "    def find_all(self):\n",
     "        return self._find()\n",
     "\n",
-    "    #    @lru_cache(maxsize=MAX_CACHE_SIZE)\n",
+    "    @lru_cache(maxsize=MAX_CACHE_SIZE)\n",
     "    def find_by_name(self, name):\n",
     "        result = None\n",
     "        try:\n",
