Fixed issue with multi-step metrics not showing up. Completed experiment tracking example

--- a/examples/05_experiment_tracking.ipynb
+++ b/examples/05_experiment_tracking.ipynb
@@ -18,7 +18,6 @@
    "source": [
     "# export\n",
     "\n",
-    "import datetime\n",
     "import tempfile\n",
     "from pathlib import Path\n",
     "\n",
@@ -44,7 +43,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Create a flow and annotate it with tracking"
+    "# Create a flow and annotate it with tracking\n",
+    "\n",
+    "You do this by adding a tracker object that has the same interface as `sciflow.experiment.tracking.SciFlowTracker`. When run within a converted flow this will be replaced by a `StepTracker`.\n",
+    "\n",
+    "There are two calls to track entities:\n",
+    "\n",
+    "* `tracker.log_metric`: log a metric value with name, value and step increment which enables a sequence of values over the workflow execution lifetime.\n",
+    "* `tracker.add_artifact`: add a file artifact. These should be saved to the local filesystem first then will be uploaded to remote storage and persisted as part of the flow execution."
    ]
   },
   {
@@ -60,7 +66,7 @@
     "    results = {}\n",
     "    if tracker:\n",
     "        with tempfile.TemporaryDirectory() as temp_dir:\n",
-    "            tracker.log_metric(\"auroc\", 0.5, 0)\n",
+    "            tracker.log_metric(\"rmse\", 0.5, 0)\n",
     "            csv_path = f\"{temp_dir}/first.csv\"\n",
     "            df = pd.DataFrame({\"a\": [1, 2, 3], \"b\": [\"a\", \"b\", \"c\"]})\n",
     "            df.to_csv(csv_path)\n",
@@ -101,6 +107,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Experiment tracking is a paramter on the conversion modules; the current default is to enable experiment tracking by default but this can be turned off using the `track` param as desired."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -130,8 +143,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "today = datetime.datetime.utcnow().strftime(\"%Y%m%d\")\n",
-    "_base_key = f\"experiment_tracking\""
+    "engine = ExperimentEngine(base_key=\"experiment_tracking\")"
    ]
   },
   {
@@ -140,7 +152,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "engine = ExperimentEngine(base_key=_base_key)"
+    "ex = engine.find_latest()[0]"
    ]
   },
   {
@@ -149,7 +161,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "engine.find_latest()[0]"
+    "expected = pd.DataFrame({\"r2\": [0.9], \"rmse\": [0.5]}, index=pd.Series([0], name=\"step\"))\n",
+    "actual_metrics = ex.metrics_as_df()\n",
+    "pd.testing.assert_frame_equal(expected, actual_metrics)"
    ]
   },
   {
@@ -157,7 +171,18 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "actual_metrics"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ex.artifacts"
+   ]
   }
  ],
  "metadata": {
