--- a/nbs/lake_experiment.ipynb
+++ b/nbs/lake_experiment.ipynb
@@ -298,6 +298,9 @@
     "                )\n",
     "        return metrics\n",
     "\n",
+    "    def metrics_as_df(self):\n",
+    "        return pd.concat(self.metrics.values(), axis=1)\n",
+    "\n",
     "    def delete(self, confirmed: bool = False):\n",
     "        raise NotImplementedError\n",
     "\n",
@@ -481,7 +484,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "experiment"
+    "experiment._load_metrics()"
    ]
   },
   {
@@ -495,6 +498,22 @@
     ")\n",
     "experiment"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "experiment._load_metrics()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
