--- a/nbs/tracking.ipynb
+++ b/nbs/tracking.ipynb
@@ -52,6 +52,7 @@
     "\n",
     "import boto3\n",
     "import pandas as pd\n",
+    "from botocore.exceptions import ClientError\n",
     "from sacred import metrics_logger\n",
     "from sacred.host_info import get_host_info\n",
     "from sacred.serializer import flatten\n",
@@ -83,7 +84,7 @@
     "_flow_run_id = f\"sample_flow_instance_{str(uuid.uuid4())[-6:]}\"\n",
     "_flow_run_key = s3_join(_flow_base_key, _flow_run_id)\n",
     "_s3_res = boto3.resource(\"s3\")\n",
-    "_steps = [\"experiment-test\"]\n",
+    "_steps = [\"experiment-test-1\", \"experiment-test-2\"]\n",
     "_step_name = _steps[0]\n",
     "_flow_base_key"
    ]
@@ -366,7 +367,6 @@
     "        self._output_file = None\n",
     "        self._metrics = metrics_logger.MetricsLogger()\n",
     "        self.captured_out = None\n",
-    "        self.saved_metrics = {}\n",
     "        self.info = {}\n",
     "        self.result = None\n",
     "        self.start_time = round(time.time())\n",
@@ -384,6 +384,18 @@
     "                    \"You must either pass in an AWS region name, or have a \"\n",
     "                    \"region name specified in your AWS config file\"\n",
     "                )\n",
+    "\n",
+    "        try:\n",
+    "            self.saved_metrics = load_json(\n",
+    "                self.s3_res,\n",
+    "                bucket_name,\n",
+    "                s3_join(self.exp_base_key, \"metrics\", \"metrics.json\"),\n",
+    "            )\n",
+    "        except ClientError as ex:\n",
+    "            if ex.response[\"Error\"][\"Code\"] == \"NoSuchKey\":\n",
+    "                self.saved_metrics = {}\n",
+    "            else:\n",
+    "                raise ex\n",
     "\n",
     "        self.flow_start_run_entry = load_json(\n",
     "            self.s3_res,\n",
@@ -443,6 +455,14 @@
     "            self.bucket_name,\n",
     "            self.metrics_key,\n",
     "            \"metrics.json\",\n",
+    "            self.saved_metrics,\n",
+    "        )\n",
+    "        # TODO: handle parallel metric producing steps - requires merge of step entries\n",
+    "        save_json(\n",
+    "            self.s3_res,\n",
+    "            self.bucket_name,\n",
+    "            self.metrics_key,\n",
+    "            f\"step_{self.step_name}_metrics.json\",\n",
     "            self.saved_metrics,\n",
     "        )\n",
     "        save_json(\n",
@@ -563,7 +583,10 @@
     "tracker.log_metric(\"auc\", 0.37, 0)\n",
     "tracker.log_metric(\"auc\", 0.45, 1)\n",
     "tracker.log_metric(\"auc\", 0.63, 2)\n",
-    "tracker.log_metric(\"auc\", 0.89, 3)"
+    "tracker.log_metric(\"auc\", 0.89, 3)\n",
+    "tracker.log_metric(\"r2\", 0.66, 0)\n",
+    "tracker.log_metric(\"r2\", 0.67, 1)\n",
+    "tracker.log_metric(\"rmse\", 0, 0)"
    ]
   },
   {
@@ -603,9 +626,9 @@
    "outputs": [],
    "source": [
     "metrics = metrics_to_df(metrics_by_name, _flow_run_id)\n",
-    "assert metrics[\"steps\"].tolist() == [0, 1, 2, 3]\n",
-    "assert metrics[\"values\"].tolist() == [0.37, 0.45, 0.63, 0.89]\n",
-    "assert metrics[\"metric\"].tolist() == [\"auc\", \"auc\", \"auc\", \"auc\"]"
+    "assert metrics[\"steps\"].tolist() == [0, 1, 2, 3, 0, 1, 0]\n",
+    "assert metrics[\"values\"].tolist() == [0.37, 0.45, 0.63, 0.89, 0.66, 0.67, 0]\n",
+    "assert metrics[\"metric\"].tolist() == [\"auc\", \"auc\", \"auc\", \"auc\", \"r2\", \"r2\", \"rmse\"]"
    ]
   },
   {
@@ -791,6 +814,31 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Add a second step.."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tracker = StepTracker(_bucket_name, _flow_base_key, _flow_run_id, _steps[1])\n",
+    "with tempfile.TemporaryDirectory() as temp_dir:\n",
+    "    with tracker.capture_out() as tracker._output_file:\n",
+    "        tracker.start_heartbeat(1.0)\n",
+    "        tracker.log_metric(\"qini_auc\", 0.5, 0)\n",
+    "        tracker.log_metric(\"qini_auc\", 0.6, 1)\n",
+    "        csv_path = f\"{temp_dir}/{_steps[1]}_file.csv\"\n",
+    "        df.to_csv(csv_path)\n",
+    "        tracker.add_artifact(csv_path)\n",
+    "    tracker.completed()"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -808,6 +856,29 @@
     "run_entry_key = s3_join(_flow_base_key, _flow_run_id, \"experiment\", \"runs\", \"run.json\")\n",
     "run_entry = load_json(_s3_res, _bucket_name, run_entry_key)\n",
     "assert run_entry[\"status\"] == \"COMPLETED\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "metrics_by_name = json.loads(\n",
+    "    pd.read_json(\n",
+    "        f\"s3://{_bucket_name}/{_flow_base_key}/{_flow_run_id}/experiment/metrics/metrics.json\"\n",
+    "    ).to_json()\n",
+    ")\n",
+    "metrics = metrics_to_df(metrics_by_name, _flow_run_id)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "assert sorted(metrics.metric.unique()) == [\"auc\", \"qini_auc\", \"r2\", \"rmse\"]"
    ]
   },
   {
@@ -996,7 +1067,7 @@
     "    exc_type, exc_value, trace = sys.exc_info()\n",
     "    except_info = {\"exc_type\": exc_type, \"exc_value\": exc_value, \"trace\": trace}\n",
     "    flow_tracker.failed(except_info)\n",
-    "    print(f\"Flow failed: {flow_run_id}\")\n",
+    "    print(f\"Flow failed: {_flow_run_id}\")\n",
     "# Exception interrupt handling\n",
     "# Failure"
    ]
